# MeuCentavo

./: README.md
MeuCentavoApp/: CMakeLists.txt  main.cpp
MeuCentavoApp/Composicoes/: PasswordFormHelper.cpp  PasswordFormHelper.h
MeuCentavoApp/DataAccess/: LancamentoDAO.cpp  LancamentoDAO.h  UsuarioDAO.cpp  UsuarioDAO.h
MeuCentavoApp/Designer/: formInicio.cpp  formInicio.h  formInicio.ui  formMain.cpp  formMain.h  formMain.ui  interfaceMeuCentavo.ui  metro.qss
MeuCentavoApp/Designer/Forms/: formBoasVindas.h  formCadastro.cpp  formCadastro.h  formCadastro.ui  formExcluirUsuario.cpp  formExcluirUsuario.h  formExcluirUsuario.ui  formUsuario.cpp  formUsuario.h  formUsuario.ui
MeuCentavoApp/Designer/FormsDashboard/: formAdicionarLancamento.cpp  formAdicionarLancamento.h  formAdicionarLancamento.ui  formMainDashboard.cpp  formMainDashboard.h  formMainDashboard.ui
MeuCentavoApp/Designer/FormsDashboard/DashboardPages/: pageHome.cpp  pageHome.h  pageHome.ui  pageLancamentos.cpp  pageLancamentos.h  pageLancamentos.ui  pageRelatorios.cpp  pageRelatorios.h  pageRelatorios.ui
MeuCentavoApp/Designer/FormsLogin/: formBoasVindas.cpp  formBoasVindas.ui  formCadastro.cpp  formCadastro.h  formLoginSenha.cpp  formLoginSenha.h  formLoginSenha.ui  formUsuario.cpp  formUsuario.h  formUsuario.ui
MeuCentavoApp/Modelo/: Lancamento.h  Usuario.h
MeuCentavoApp/Negocio/: LancamentoDAO.cpp  LancamentoDAO.h  UsuarioDAO.cpp  UsuarioDAO.h
Qt/: CMakeLists.txt
bancos de dados/: dump-gestaofinanceira-202506132230.sql  dump-mysql-202506132230.sql  dump-performance_schema-202506132230.sql  dump-sys-202506132230.sql  dump-test-202506132230.sql
